crates/snapshot-tests/tests/snapshots/parser__bad_table_names__unterminated_one.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated literal string, expected `'`
  ┌─ unterminated_one:1:4
  │
1 │ [']
  │    ^ expected `'`


error: unterminated literal string, expected `'`
 --> unterminated_one:1:4
  |
1 | [']
  |    ^ expected `'`
Error {
    kind: "UnterminatedString",
    message: "unterminated literal string, expected `'`",
    span: 3..3,
    path: None,
}
